--- a/app/src/main/res/layout/activity_driver_map.xml
+++ b/app/src/main/res/layout/activity_driver_map.xml
@@ -62,46 +62,48 @@
         android:elevation="1dp"
         android:translationZ="1dp">
 
-     <LinearLayout
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="114dp"
+            android:orientation="horizontal">
 
-         <ImageView
-             android:layout_width="100dp"
-             android:layout_height="100dp"
-             android:id="@+id/customerProfileImage"
-             android:src="@mipmap/ic_default_user"
-             android:padding="20sp"
-             />
-         <LinearLayout
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:orientation="vertical"
-             android:paddingLeft="40sp">
+            <ImageView
+                android:id="@+id/customerProfileImage"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:padding="20sp"
+                android:src="@mipmap/ic_default_user" />
 
-             <TextView
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:id="@+id/customerDestination"
-                 android:paddingBottom="10sp"
-                 android:text="Destination: --"/>
-             <TextView
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:id="@+id/customerName"
-                 android:paddingBottom="10sp"
-                 android:paddingTop="20sp"/>
-             <TextView
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:id="@+id/customerPhone"
-                 android:paddingBottom="10sp"
-                 android:paddingTop="20sp"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingLeft="40sp">
 
-         </LinearLayout>
+                <TextView
+                    android:id="@+id/customerDestination"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="10sp"
+                    android:text="Destination: --" />
 
-     </LinearLayout>
+                <TextView
+                    android:id="@+id/customerName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="20sp"
+                    android:paddingBottom="10sp" />
+
+                <TextView
+                    android:id="@+id/customerPhone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="20sp"
+                    android:paddingBottom="10sp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
